setup-env/e2e-tests/setups/telefonica/mex-controller-deploy.yml
# Copyright 2022 MobiledgeX, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: controller
  labels:
    app: controller
spec:
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller
        image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:jlm0919
        imagePullPolicy: Always
        command:
         - "controller"
         - "--apiAddr"
         - "0.0.0.0:55001"
         - "--httpAddr"
         - "0.0.0.0:36001"
         - "--notifyAddr"
         - "0.0.0.0:37001"
         - "--etcdUrls"  
         - "mex-etcd-cluster:2379"
         - "--d" 
         - "etcd,api,notify"
        ports:
         - containerPort: 55001 
           hostPort: 55001

      imagePullSecrets:
       - name: mexregistrysecret
