setup-env/e2e-tests/setups/telefonica/mex-crm-deploy-tef.yml
# Copyright 2022 MobiledgeX, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crmopenneb
  labels:
    app: crmopenneb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crmopenneb
  template:
    metadata:
      labels:
        app: crmopenneb
    spec:
      containers:
      - name: crmopenneb
        image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:latest
        command:
         - crmserver
        args:
         - "--apiAddr"
         - "0.0.0.0:55091"
         - "--cloudletKey"
         - "{\"operator_key\":{\"name\":\"tef\"},\"name\":\"opennebulacloudlet\"}"
         - "--notifyAddrs"
         - "controller:37001"
         - "--d"
         - "mexos"

      imagePullSecrets:
       - name: mexreg-secret
