setup-env/e2e-tests/setups/telefonica/mex-dme-deploy.yml
# Copyright 2022 MobiledgeX, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dme
  labels:
    app: dme
spec:
  selector:
    matchLabels:
      app: dme
  template:
    metadata:
      labels:
        app: dme
    spec:
      containers:
      - name: dme
        image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:jlm0919
        imagePullPolicy: Always
        command:
         - "dme-server"
         - "--apiAddr"
         - "0.0.0.0:50051"
         - "--notifyAddrs"
         - "controller:37001"
         - "--d"
         - "locapi,dmedb,dmereq"
         - "--cloudletKey"
         - "{\"operator_key\":{\"name\":\"tef\"},\"name\":\"opennebulacloudlet\"}"
        ports:
         - containerPort: 50051
           hostPort: 50051
      imagePullSecrets:
       - name: mexregistrysecret
