setup-env/e2e-tests/setups/telefonica/ingress-controller.yml
# Copyright 2022 MobiledgeX, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
 

spec:
  # tls:
  # This assumes tls-secret exists.
  #- secretName: mex-server-tls-secret
  rules:
  - http:
      paths:
      -  path: "/getdata"
         backend:
          serviceName: mobiledgexsdkdemo-service
          servicePort: 80
